# vertex-mlops

./: .flake8  .safety-policy.yml  README.md  forecasting_automl.json  forecasting_bqml.json  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  tabular_classification_automl.json  tabular_classification_automl_evaluation.json  tabular_classification_bqml.json  tabular_regression_automl.json  tabular_regression_bqml.json
.github/workflows/: tests.yml
notebooks/: temp.ipynb
scripts/: compile.sh  run.sh
src/components/bigquery/: bq_import.py  import.py
src/components/metrics/: automl.py  bqml.py
src/pipelines/: tabular_classification_pipeline.py
src/pipelines/forecasting/automl/: params.json  pipeline.py
src/pipelines/forecasting/bqml/: params.json  pipeline.py
src/pipelines/tabular_classification/automl/: params.json  pipeline.py
src/pipelines/tabular_classification/automl_evaluation/: params.json  pipeline.py
src/pipelines/tabular_classification/bqml/: params.json  pipeline.py
src/pipelines/tabular_classification/custom/: Untitled.ipynb  pipeline.py
src/pipelines/tabular_regression/automl/: params.json  pipeline.py
src/pipelines/tabular_regression/bqml/: params.json  pipeline.py
src/pipelines/trigger/: main.py  pipeline.py
tests/: test_tabular_regression.py
